--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,9 @@
 <h3>Hello, We're Open!</h3>
-<button class="btn btn-success">Click or Die</button>
+</br>
+<button class="btn btn-success" onclick="something()">Click or Die</button>
+<script>
+function something()
+{
+alert ('Hello again!');
+}
+</script>
