--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,20 @@
-<h3>Hello, We're Open!</h3>
+<%@title="Main - PizzaShop"%>
+
+	<div class="raw">
+<h3 class="text-center">Hello, We're Open!</h3>
 </br>
-<button class="btn btn-success" onclick="something()">Click or Die</button>
+	<%@products.each do |product|%>
+		<a style="white-space: pre-wrap;" class="col-md-4" href="/product/<%=product.id%>">
+<p class="text-center">
+<b><%=product.title%></b>
+<%=product.description%>
+size:		<%=product.size%>''
+price:	$<%=product.price%>
+</br>
+<img src="<%=product.path_to_image%>"></img>
+</p>
+</a>
+	<%end%>
+	</div>
+</br>
+<!--button class="btn btn-success" onclick="something()">Click or Die</button>-->
