pass 'id' parameter to 'add_to_cart' function

--- a/views/index.erb
+++ b/views/index.erb
@@ -16,7 +16,7 @@ price:	$<%=product.price%>
 </a>
 </div>
 <div class="text-center">
-<button class="btn btn-success" onclick="add_to_cart()">Add to shopping-cart</button>
+<button class="btn btn-success" onclick="add_to_cart(<%=product.id%>)">Add to shopping-cart</button>
 </div>
 </span>
 <%end%>
