'cart_contain' function added

--- a/views/index.erb
+++ b/views/index.erb
@@ -23,4 +23,4 @@ price:	$<%=product.price%>
 	</div>
 </br>
 
-<!--button class="btn btn-success" onclick="something()">Click or Die</button>-->
+<button class="btn btn-success" onclick="alert (cart_contains())">Check my shopping-cart</button>
