--- a/views/layout.erb
+++ b/views/layout.erb
@@ -45,6 +45,13 @@
 			<li><a href="/something">Something</a></li>
 			<li><a href="/contacts">Contacts</a></li>
 			</ul>
+			<ul class="nav navbar-nav navbar-right">
+			<li>
+			<form id="shopping form" action="/cart" method="POST" role="form">
+			<input name="orders" id="orders_input"type="text" value="" placeholder=""/>
+			<input type="submit" class="btn-lg btn-success" Value="Shopping-cart (..)"></input></li>
+			</form>
+			</ul>
 			</div><!--/.nav-collapse -->
 			</nav>
 
