update the button text with current number of items in the cart

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -48,8 +48,8 @@
 			<ul class="nav navbar-nav navbar-right">
 			<li>
 			<form id="shopping form" action="/cart" method="POST" role="form">
-			<input name="orders" id="orders_input"type="text" value="" placeholder=""/>
-			<input type="submit" class="btn-lg btn-success" Value="Shopping-cart (..)"></input></li>
+			<input name="orders" id="orders_input" type="text" value="" placeholder=""/>
+			<input type="submit" id="orders_button" class="btn-lg btn-success" Value="Shopping-cart (..)"></input></li>
 			</form>
 			</ul>
 			</div><!--/.nav-collapse -->
