keys in hash are the Product objects now, values are the ordered amount

--- a/views/cart.erb
+++ b/views/cart.erb
@@ -13,8 +13,7 @@
 	</thead>
 	<tbody>
 		<%@total=0 %>
-		<%@orders.each do |product_id, count| %>
-			<%product=@products.find(product_id) %>
+		<%@orders.each do |product, count| %>
 			<%@total+=product.price*count.to_i%>
 			<tr>
 				<td><img src="<%=product.path_to_image%>"></img></td>
