--- a/views/cart.erb
+++ b/views/cart.erb
@@ -1,7 +1,7 @@
 <%@title="Shopping-Cart - PizzaShop"%>
 <h3 class="text-center">Your Order:</h3>
 </br>
-<table class="table">
+<table class="table table-striped">
 	<thead>
 		<tr>
 		<th>Image</th>
