--- a/views/layout.erb
+++ b/views/layout.erb
@@ -48,7 +48,7 @@
 			<ul class="nav navbar-nav navbar-right">
 			<li>
 			<form id="shopping form" action="/cart" method="POST" role="form">
-			<input name="orders" id="orders_input" type="text" value="" placeholder=""/>
+			<input name="orders" id="orders_input" type="hidden" value="" placeholder=""/>
 			<input type="submit" id="orders_button" class="btn-lg btn-success" Value="Shopping-cart (..)"></input></li>
 			</form>
 			</ul>
