--- a/views/cart.erb
+++ b/views/cart.erb
@@ -1,22 +1,12 @@
 <%@title="Shopping-Cart - PizzaShop"%>
-<h3 class="text-center">Your Order:</h3>
-</br>
 <table class="table table-striped">
-	<thead>
-		<tr>
-		<th>Image</th>
-		<th>Title</th>
-		<th>Price, $ per piece</th>
-		<th>Count</th>
-		<th>Price, $ per all</th>
-		</tr>
-	</thead>
+	<thead><tr><th>Image</th><th>Title</th><th>Price, $ per piece</th><th>Count</th><th>Price, $ per all</th></tr></thead>
 	<tbody>
 		<%@total=0 %>
 		<%@orders.each do |product, count| %>
 			<%@total+=product.price*count.to_i%>
 			<tr>
-				<td><img src="<%=product.path_to_image%>"></img></td>
+				<td><img  height="60" width="90"src="<%=product.path_to_image%>"></img></td>
 				<td><%=product.title%></td>
 				<td><%=product.price%></td>
 				<td><%=count%></td>
@@ -25,8 +15,23 @@
 		<%end%>
 	</tbody>
 </table>
-<hr>
-<p>
-<%="Total: $#{@total}"%>
-</p>
+<hr><p class="text-right"><strong><%="Total: $#{@total}"%></strong></p><hr>
 
+<form id="visit form" action="/place_order" method="POST" role="form">
+<input name="order[details]" id="orders_input" type="hidden" value="<%=@orders_input%>" placeholder=""/>
+	<div class="form-group">
+		<label>Your name:</label>
+		<input name="order[name]" type="text" class="form-control" value="" placeholder="Your name">
+	</div>
+
+	<div class="form-group">
+		<label>Phone:</label>
+		<input name="order[phone]" type="text" class="form-control" value=""placeholder="Your phone">
+	</div>	
+
+	<div class="form-group">
+		<label>Delivery address:</label>
+		<textarea rows="1" name="order[addres]" type="text" class="form-control" value=""placeholder="Suburb, Street, Building, Apartments"></textarea>
+	</div>
+	<button type="submit" class="btn btn-success">Process My Order!</button>
+</form></br>
