--- a/views/cart.erb
+++ b/views/cart.erb
@@ -21,17 +21,17 @@
 <input name="order[details]" id="orders_input" type="hidden" value="<%=@orders_input%>" placeholder=""/>
 	<div class="form-group">
 		<label>Your name:</label>
-		<input name="order[name]" type="text" class="form-control" value="" placeholder="Your name">
+		<input name="order[name]" type="text" class="form-control" value="<%=@order.name%>" placeholder="Your name">
 	</div>
 
 	<div class="form-group">
 		<label>Phone:</label>
-		<input name="order[phone]" type="text" class="form-control" value=""placeholder="Your phone">
-	</div>	
+		<input name="order[phone]" type="text" class="form-control" value="<%=@order.phone%>"placeholder="Your phone">
+	</div>
 
 	<div class="form-group">
 		<label>Delivery address:</label>
-		<textarea rows="1" name="order[addres]" type="text" class="form-control" value=""placeholder="Suburb, Street, Building, Apartments"></textarea>
+		<textarea rows="1" name="order[address]" class="form-control" placeholder="Suburb, Street, Building, Apartments"><%=@order.address%></textarea>
 	</div>
 	<button type="submit" class="btn btn-success">Process My Order!</button>
 </form></br>
