shopping-cart button restyled

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,7 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<!-- Bootstrap -->
-		<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">	
+
+		<!-- Self -->
+		<link href="/app.css" rel="stylesheet">
 
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="/vendor/jquery-1.9.1.min.js"></script>
@@ -49,7 +52,7 @@
 			<li>
 			<form id="shopping form" action="/cart" method="POST" role="form">
 			<input name="orders" id="orders_input" type="hidden" value="" placeholder=""/>
-			<input type="submit" id="orders_button" class="btn-lg btn-success" Value="Shopping-cart (..)"></input></li>
+			<input type="submit" id="orders_button" type="button" class="btn btn-link" value="Shopping-cart (..)"></input></li>
 			</form>
 			</ul>
 			</div><!--/.nav-collapse -->
