--- a/views/layout.erb
+++ b/views/layout.erb
@@ -52,7 +52,7 @@
 			<li>
 			<form id="shopping form" action="/cart" method="POST" role="form">
 			<input name="orders" id="orders_input" type="hidden" value="" placeholder=""/>
-			<input type="submit" id="orders_button" type="button" class="btn btn-link" value="Shopping-cart (..)"></input></li>
+			<input type="submit" id="orders_button" type="button" class="btn btn-link" value=""></input></li>
 			</form>
 			</ul>
 			</div><!--/.nav-collapse -->
