--- a/views/layout.erb
+++ b/views/layout.erb
@@ -50,8 +50,8 @@
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 			<li>
-			<form id="shopping form" action="/cart" method="POST" role="form">
-			<input name="orders" id="orders_input" type="hidden" value="" placeholder=""/>
+			<form id="shopping form" action="/cart" method="POST" onclick="update_orders();" role="form">
+			<input name="orders" class="orders_input" type="hidden" value="" placeholder=""/>
 			<input type="submit" id="orders_button" type="button" class="btn btn-link" value=""></input></li>
 			</form>
 			</ul>
