--- a/views/index.erb
+++ b/views/index.erb
@@ -12,7 +12,7 @@
 size:		<%=product.size%>''
 price:	$<%=product.price%>
 </br>
-<img src="<%=product.path_to_image%>"></img>
+<img height="120" width="180" src="<%=product.path_to_image%>"></img>
 </a>
 </div>
 <div class="text-center">
